--- a/src/assets/custom-vue/css/custom.css
+++ b/src/assets/custom-vue/css/custom.css
@@ -28,3 +28,79 @@
     background: #fff;
     border-top-left-radius: 20px;
 }
+
+
+
+/* TOGGLE DARKMODE  */
+
+label.darkmode {
+    width: 72px;
+    height: 30px;
+    position: relative;
+    display: block;
+    background: #ebebeb;
+    border-radius: 15px;
+    box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.4), inset 0 -3px 8px rgba(255, 255, 255, 0.4);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+label.darkmode:after {
+    content: "";
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    background: linear-gradient(180deg, #ffcc89, #d8860b);
+    border-radius: 11px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+input.darkmode {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+}
+
+input.darkmode:checked+label.darkmode {
+    background: #242424;
+}
+
+input.darkmode:checked+label.darkmode:after {
+    left: 66px;
+    transform: translateX(-100%);
+    background: linear-gradient(180deg, #777, #3a3a3a);
+}
+
+label.darkmode:active:after {
+    width: 30px;
+}
+
+label.darkmode svg {
+    position: absolute;
+    width: 16px;
+    top: 6px;
+    z-index: 100;
+}
+
+label.darkmode svg.sun {
+    left: 7px;
+    fill: #fff;
+    transition: 0.3s;
+}
+
+label.darkmode svg.moon {
+    left: 48px;
+    fill: #7e7e7e;
+    transition: 0.3s;
+}
+
+input.darkmode:checked+label.darkmode svg.sun {
+    fill: #7e7e7e;
+}
+
+input.darkmode:checked+label.darkmode svg.moon {
+    fill: #fff;
+}
