update fixing bug

--- a/src/assets/custom-vue/css/custom.css
+++ b/src/assets/custom-vue/css/custom.css
@@ -35,8 +35,6 @@
 
 .nav-item:hover>a {
     background: #5a77f7 !important;
-    border-radius: 20px;
-    color: #fff !important;
 }
 
 .dropdown-usa {
@@ -56,12 +54,17 @@
 .dropdown-item {
     font-weight: 900 !important;
     padding: 7px;
+    color: black !important;
 }
 
 .dropdown-item:hover {
-    background: #5a77f7;
-    color: white;
+    background: #b6c3ff !important;
+    color: black !important;
     border-radius: 5px;
+}
+
+.dropdown-item:active {
+    color: black !important;
 }
 
 .dropdown-item.logout {
@@ -150,3 +153,5 @@ input.darkmode:checked+label.darkmode svg.sun {
 input.darkmode:checked+label.darkmode svg.moon {
     fill: #fff;
 }
+
+
